adding some new changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Added new para modified it</p>
+    <p>Added new para changing para it</p>
   </body>
 </html>
